# running-coach

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  Dockerfile  PROJECT_AUDIT.md  README.md  SPRINT_3_PLAN.md  TECH_DEBT.md  WORK_PLAN_RATING_WEB.md  alembic.ini  decision_module_design.md  docker-compose.yml  main.py  opencode.json  project_plan.txt  pyproject.toml  run_telegram_bot.py  running-coach-bot.service  running-coach-web.service  running_coach.db-shm  running_coach.db-wal  обсуждение
.github/workflows/: ci.yml
.opencode/agents/: architect.md  coder.md  devops.md  orchestrator.md  reviewer.md  tester.md
alembic/: env.py
alembic/versions/: 0bba2c2badec_drop_user_settings_table.py  3205fe660d47_add_user_timezone_column.py  4201426df9cc_add_training_sessions_timezone_column.py  5e287a9fc289_convert_all_datetime_columns_to_.py  69f28e182276_add_auth_tokens_table.py  a1b2c3d4e5f6_convert_old_begin_ts_to_utc.py  b6c7d8e9f0a1_add_watch_credentials_table.py  c3f51ae84837_baseline.py  (+10 more)
docs/: API_ROUTES_GUIDE.md  ARCHITECTURE.md  CHECKLIST_API.md  CHECKLIST_FEATURE.md  CHECKLIST_MIGRATION.md  CHECKLIST_NEW_PROVIDER.md  CODE_GUIDELINES.md  DEVELOPMENT_GUIDELINES.md  ERROR_HANDLING.md  LOGGING.md  NAMING_CONVENTIONS.md  TESTING.md  coros_health_metrics.md
fixes/: README.md
running-coach/: AGENTS.md  CHANGELOG.md  main.py
src/: coros_client.py  crypto.py  deps.py  exceptions.py  logger.py  models.py  scheduler.py  startup.py  telegram_bot.py
tests/: conftest.py  helpers.py  test_classify.py  test_gps.py  test_health.py  test_hr_zones.py  test_models.py  test_oscillation.py  test_process_trackpoints.py  test_segment.py  test_stats.py
(+115 files in other folders)
