[project]
name = "running-coach"
version = "2.0.0"
description = "Personal AI Running Coach — парсинг TCX/FIT, аналитика, Telegram-бот"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.138.0",
    "uvicorn==0.49.0",
    "sqlalchemy==2.0.51",
    "python-telegram-bot[job-queue]==22.8",
    "cryptography==49.0.0",
    "fitdecode==0.11.0",
    "httpx==0.28.1",
    "psutil>=6.0,<7",
    "pydantic==2.13.4",
    "timezonefinder==8.2.4",
    "python-multipart==0.0.32",
    "starlette==1.3.1",
    "pydantic-settings==2.14.2",
    "itsdangerous==2.2.0",
    "bcrypt==4.2.1",
    "psycopg2-binary==2.9.10",
    "alembic==1.18.5",
    "jinja2==3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
